# llm-misinfo-eval

./: .gitignore  README.md  data.jsonl  pyproject.toml  requirements.txt  tmp.jsonl  together-Qwen-QwQ-32B-x-fact.jsonl  together-deepseek-r1-1.5b-qwen-x-fact.jsonl  together-llama-3.1-8b-reuslts.jsonl  x-fact-in-domain-together-llama-3.2-3B-numerical.jsonl  x-fact-zero-shot-together-deepseek-r1-qwen-1.5b-numerical.jsonl  x-fact-zero-shot-together-llama-3.2-3B-mcq.jsonl  x_fact-deepseek_v3.jsonl
archive/: data.jsonl  tmp.jsonl  x-fact-zero-shot-openai-gemini-2.0-flash-numerical.jsonl  x-fact-zero-shot-openai-o4-mini-mcq.jsonl  x-fact-zero-shot-openai-o4-mini-numerical.jsonl
data/: cohere_results  cohere_results_test
notebooks/: Additional Cohere Analysis.ipynb  Additional-GPT-4-Analysis.ipynb  Cohere Results Analysis.ipynb  Cohere.ipynb  GPT Results Analysis.ipynb  GPT.ipynb  Gemini Analysis 50 Results.ipynb  Gemini Results - 50 - Sheet1.csv  Gemini Results Analysis.ipynb  Gemini.ipynb  X-Fact - Vertex WIP.csv  cohere_eval.ipynb  cohere_eval_zeroshot_test.ipynb  gemini_eval.ipynb  prompt1.json  prompt1_analysis_partlyTrueisFalse.ipynb  prompt1_analysis_partlyTrueisTrue.ipynb  prompt2.json  prompt3.json  run_gpt-4-0125-preview_naacl.csv
results/: o4-mini-reuslts.jsonl  together-deepseek-r1-x-fact.jsonl
scripts/: run_evals.sh  run_evals_batch_1.sh  run_evals_batch_2.sh  run_evals_batch_3.sh  run_evals_batch_4.sh  run_evals_batch_5.sh  run_evals_batch_6.sh  run_evals_batch_7.sh  run_evals_batch_8.sh  run_evals_batch_9.sh  run_zero_shot_model.py
src/: utils.py
(+66 files in other folders)
