[project]
name = "eval_misinfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "cohere>=5.15.0",
    "google-genai>=1.15.0",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
    "together>=1.5.8",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
